--- a/Smart-Agency/Bootstrap4/index.html
+++ b/Smart-Agency/Bootstrap4/index.html
@@ -5,8 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="author" content="Diego Velázquez">
-    <meta name="description" content="Smart Agency is a one page responsive Bootstrap 4 template. This is a free open source theme, you can use our theme for any purpose, even commercially. Create amazing websites with this easy to customize template.">
+    <meta name="author" content="">
+    <meta name="description" content="Bootstrap 4 template.">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -23,7 +23,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/images//favicon.png" />
 
-    <title>Smart Agency Template | Themes Bootstrap</title>
+    <title>David Romero Scozziero|  Bootstrap prueba</title>
 </head>
 
 <body>
@@ -44,16 +44,16 @@
                         <a class="nav-link" href="#portfolio">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#team">About us</a>
+                        <a class="nav-link" href="#team">Sobre Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#pricing">Pricing</a>
+                        <a class="nav-link" href="#pricing">Precios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#testimonial">Testimonials</a>
+                        <a class="nav-link" href="#testimonial">Testimonios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
+                        <a class="nav-link" href="#contact">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -63,7 +63,7 @@
     <section id="hero">
         <duv class="container">
             <div class="content-center">
-                <h1 class="mt-5">Website Design and Development</h1>
+                <h1 class="mt-5">Website Diseño y Desarrollo</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui ea consequuntur, odit veniam mollitia
                     aliquam reiciendis dignissimos, vitae sapiente neque, cum dolorum.</p>
                 <a href="#" class="btn btn-secondary mt-4">Explore now <img src="assets/images/arrow-right.svg" class="ml-2"></a>
@@ -74,7 +74,7 @@
     <section id="portfolio">
         <div class="container-fluid">
             <div class="content-center">
-                <h2>We work with exciting brands to build <b>amazing products.</b></h2>
+                <h2>Trabajamos con marcas emocionantes para construir <b>productos increibles.</b></h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui ea consequuntur, odit veniam mollitia
                     aliquam reiciendis dignissimos, vitae sapiente neque, cum dolorum. Suscipit expedita obcaecati
                     nesciunt error ut quidem autem.</p>
@@ -123,7 +123,7 @@
                     <div class="portfolio-container">
                         <div class="portfolio-details">
                             <a href="#">
-                                <h2>No Speed Limits</h2>
+                                <h2>No hay limitaciones</h2>
                             </a>
                             <a href="#">
                                 <p>— App/Digital Product</p>
@@ -134,8 +134,8 @@
                 </div>
             </div>
             <div class="text-center mt-4">
-                <p class="">Ready to accelerate your project?</p>
-                <a href="#" class="text-dark"><b>Just let us know.</b></a>
+                <p class="">Listo para acelerar tu prroyecto?</p>
+                <a href="#" class="text-dark"><b>Dejanos a nosotros.</b></a>
             </div>
         </div>
     </section>
@@ -143,7 +143,7 @@
     <section id="team" class="bgLightGrey">
         <div class="container">
             <div class="content-center">
-                <h2>Keep calm, you're in a <b>good company</b></h2>
+                <h2>Tranquilo estas en una<b>buena compania</b></h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui ea consequuntur, odit veniam mollitia
                     aliquam reiciendis dignissimos, vitae sapiente neque, cum dolorum. Suscipit expedita obcaecati
                     nesciunt error ut quidem autem.</p>
@@ -152,8 +152,8 @@
                 <div class="col-md-4">
                     <div class="member-container">
                         <div class="member-details">
-                            <h5>Michelle B. Rowe</h5>
-                            <span>Creative director</span>
+                            <h5>David Romero Scozziero</h5>
+                            <span>CEO</span>
                             <ul class="list-inline">
                                 <li class="list-inline-item"><a href="#"><img src="assets/images/instagram.svg" class="img-fluid"></a>
                                 </li>
@@ -170,7 +170,7 @@
                     <div class="member-container">
                         <div class="member-details">
                             <h5>Veronica D. Martin</h5>
-                            <span>Lead designer</span>
+                            <span>Diseñador</span>
                             <ul class="list-inline">
                                 <li class="list-inline-item"><a href="#"><img src="assets/images/instagram.svg" class="img-fluid"></a>
                                 </li>
@@ -187,7 +187,7 @@
                     <div class="member-container">
                         <div class="member-details">
                             <h5>Richard A. Hair</h5>
-                            <span>Lead developer</span>
+                            <span>Desarrollador</span>
                             <ul class="list-inline">
                                 <li class="list-inline-item"><a href="#"><img src="assets/images/instagram.svg" class="img-fluid"></a>
                                 </li>
@@ -414,7 +414,7 @@
                 <li class="list-inline-item"><a href="#"><img src="assets/images/dribbble.svg" class="img-fluid"></a></li>
                 <li class="list-inline-item"><a href="#"><img src="assets/images/facebook.svg" class="img-fluid"></a></li>
             </ul>
-            <small>©2020 All Rights Reserved. Created by <a href="https://themesbootstrap.com.mx/" class="font-weight-bold" target="_blank"
+            <small>©2022 Todos los derechos reservados<a href="https://themesbootstrap.com.mx/" class="font-weight-bold" target="_blank"
                     rel="noopener">Themes Bootstrap</a></small>
         </div>
     </footer>
