--- a/Smart-Agency/Bootstrap4/index.html
+++ b/Smart-Agency/Bootstrap4/index.html
@@ -74,7 +74,7 @@
     <section id="portfolio">
         <div class="container-fluid">
             <div class="content-center">
-                <h2>Trabajamos con marcas emocionantes para construir <b>productos increibles.</b></h2>
+                <h2>Trabajamos con marcas emocionantes para construir <b> productos increibles.</b></h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui ea consequuntur, odit veniam mollitia
                     aliquam reiciendis dignissimos, vitae sapiente neque, cum dolorum. Suscipit expedita obcaecati
                     nesciunt error ut quidem autem.</p>
@@ -97,10 +97,10 @@
                     <div class="portfolio-container">
                         <div class="portfolio-details">
                             <a href="#">
-                                <h2>New Horizons</h2>
+                                <h2>Nuevos horizontes</h2>
                             </a>
                             <a href="#">
-                                <p>— App/Digital Product</p>
+                                <p>— Productos - App/Digital</p>
                             </a>
                         </div>
                         <img src="assets/images/portfolio-02.jpg" class="img-fluid" alt="Portfolio 02">
@@ -110,10 +110,10 @@
                     <div class="portfolio-container">
                         <div class="portfolio-details">
                             <a href="#">
-                                <h2>Urban Oasis</h2>
+                                <h2>Oasis Urbano</h2>
                             </a>
                             <a href="#">
-                                <p>— App/Digital Product</p>
+                                <p>— Productos - App/Digital</p>
                             </a>
                         </div>
                         <img src="assets/images/portfolio-03.jpg" class="img-fluid" alt="Portfolio 03">
@@ -126,7 +126,7 @@
                                 <h2>No hay limitaciones</h2>
                             </a>
                             <a href="#">
-                                <p>— App/Digital Product</p>
+                                <p>— Productos - App/Digital</p>
                             </a>
                         </div>
                         <img src="assets/images/portfolio-04.jpg" class="img-fluid" alt="Portfolio 04">
@@ -134,7 +134,7 @@
                 </div>
             </div>
             <div class="text-center mt-4">
-                <p class="">Listo para acelerar tu prroyecto?</p>
+                <p class="">Listo para acelerar tu proyecto?</p>
                 <a href="#" class="text-dark"><b>Dejanos a nosotros.</b></a>
             </div>
         </div>
@@ -143,7 +143,7 @@
     <section id="team" class="bgLightGrey">
         <div class="container">
             <div class="content-center">
-                <h2>Tranquilo estas en una<b>buena compania</b></h2>
+                <h2>Tranquilo estas en una<b> buena compania</b></h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui ea consequuntur, odit veniam mollitia
                     aliquam reiciendis dignissimos, vitae sapiente neque, cum dolorum. Suscipit expedita obcaecati
                     nesciunt error ut quidem autem.</p>
@@ -152,7 +152,7 @@
                 <div class="col-md-4">
                     <div class="member-container">
                         <div class="member-details">
-                            <h5>David Romero Scozziero</h5>
+                            <h5>Cristina Gonzalez</h5>
                             <span>CEO</span>
                             <ul class="list-inline">
                                 <li class="list-inline-item"><a href="#"><img src="assets/images/instagram.svg" class="img-fluid"></a>
@@ -169,8 +169,8 @@
                 <div class="col-md-4">
                     <div class="member-container">
                         <div class="member-details">
-                            <h5>Veronica D. Martin</h5>
-                            <span>Diseñador</span>
+                            <h5>Veronica Martin</h5>
+                            <span>Diseñadora</span>
                             <ul class="list-inline">
                                 <li class="list-inline-item"><a href="#"><img src="assets/images/instagram.svg" class="img-fluid"></a>
                                 </li>
@@ -186,7 +186,7 @@
                 <div class="col-md-4">
                     <div class="member-container">
                         <div class="member-details">
-                            <h5>Richard A. Hair</h5>
+                            <h5>Ricardo Lopez</h5>
                             <span>Desarrollador</span>
                             <ul class="list-inline">
                                 <li class="list-inline-item"><a href="#"><img src="assets/images/instagram.svg" class="img-fluid"></a>
@@ -252,7 +252,7 @@
     <section id="testimonial" class="divider">
         <div class="container">
             <div class="content-center">
-                <h2>A few words from <b>our clients…</b></h2>
+                <h2>Algunas palabras <b>de nuestros clientes…</b></h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui ea consequuntur, odit veniam mollitia
                     aliquam reiciendis dignissimos, vitae sapiente neque, cum dolorum.</p>
             </div>
@@ -355,10 +355,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 mt-4">
-                    <h3>Ready to accelerate your project? <b>just let us know.</b></h3>
+                    <h3>Listo para acelerar tu proyecto? <b>dejanos a nosotros.</b></h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui ea consequuntur, odit veniam
                         mollitia aliquam reiciendis dignissimos, vitae sapiente neque, cum dolorum.
-                        contact@smartagency.com</p>
+                        davidfromeroscozziero@gmail.com</p>
                 </div>
                 <div class="col-md-6 mt-4">
                     <div class="row">
@@ -388,7 +388,7 @@
                             </div>
                         </div>
                         <div class="col-md-12">
-                            <a href="" class="btn btn-primary full-width">Contact sales</a>
+                            <a href="" class="btn btn-primary full-width">Contacto ventas</a>
                         </div>
                     </div>
                 </div>
