--- a/Smart-Agency/Bootstrap4/index.html
+++ b/Smart-Agency/Bootstrap4/index.html
@@ -207,7 +207,7 @@
     <section id="pricing" class="divider">
         <div class="container">
             <div class="content-center">
-                <h2>Pricing built for <b>every business</b></h2>
+                <h2>Precios para <b> cada negocio</b></h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui ea consequuntur, odit veniam mollitia
                     aliquam reiciendis dignissimos, vitae sapiente neque, cum dolorum. Suscipit expedita obcaecati
                     nesciunt error ut quidem autem.</p>
@@ -216,32 +216,30 @@
                 <div class="col-md-6">
                     <div class="pricing-container">
                         <div class="plans plan-light">
-                            <h4>Starter solution</h4>
-                            <h2>$89 <span>/ per month</span></h2>
-                            <h4>Per 1 Million Data Points</h4>
+                            <h4>Paquete Inicial</h4>
+                            <h2>$89 <span>/ por mes</span></h2>
+                            <h4>1 millon de datos</h4>
                             <ul class="mt-3">
-                                <li>Integration with Google Analytics</li>
-                                <li>Online payments</li>
-                                <li>Solution Architect</li>
-                                <li>Dedicated Support</li>
+                                <li>Integracion con Google Analytics</li>
+                                <li>Pagos Online </li>
+                                <li>Soporte 24/7</li>
                             </ul>
-                            <a href="#" class="btn btn-primary full-width mt-4">Start now</a>
+                            <a href="#" class="btn btn-primary full-width mt-4">Empeza ahora</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="pricing-container">
                         <div class="plans plan-dark">
-                            <h4>Enterprise solution</h4>
-                            <h2>$139 <span>/ per month</span></h2>
-                            <h4>Per 1 Million Data Points</h4>
+                            <h4>Paquete premium</h4>
+                            <h2>$139 <span>/ por mes</span></h2>
+                            <h4>Mas de 1 Million de datos</h4>
                             <ul class="mt-3">
-                                <li>Integration with Google Analytics</li>
-                                <li>Online payments</li>
-                                <li>Solution Architect</li>
-                                <li>Dedicated Support</li>
+                               <li>Integracion con Google Analytics</li>
+                               <li>Pagos Online </li>
+                               <li>Soporte 24/7</li>
                             </ul>
-                            <a href="#" class="btn btn-alternate full-width mt-4">Start now</a>
+                            <a href="#" class="btn btn-alternate full-width mt-4">Empeza ahora</a>
                         </div>
                     </div>
                 </div>
@@ -403,9 +401,9 @@
             <ul class="list-inline">
                 <li class="list-inline-item footer-menu"><a href="#">Home</a></li>
                 <li class="list-inline-item footer-menu"><a href="#">Portfolio</a></li>
-                <li class="list-inline-item footer-menu"><a href="#">About us</a></li>
-                <li class="list-inline-item footer-menu"><a href="#">Pricing</a></li>
-                <li class="list-inline-item footer-menu"><a href="#">Contact</a></li>
+                <li class="list-inline-item footer-menu"><a href="#">Acerca de nosotros</a></li>
+                <li class="list-inline-item footer-menu"><a href="#">Precios</a></li>
+                <li class="list-inline-item footer-menu"><a href="#">Contacto</a></li>
             </ul>
             <ul class="list-inline">
                 <li class="list-inline-item"><a href="#"><img src="assets/images/instagram.svg" class="img-fluid"></a></li>
