--- a/Smart-Agency/Bootstrap4/index.html
+++ b/Smart-Agency/Bootstrap4/index.html
@@ -84,10 +84,10 @@
                     <div class="portfolio-container">
                         <div class="portfolio-details">
                             <a href="#">
-                                <h2>Keep Calm and Eat</h2>
+                                <h2>Grandes resultados</h2>
                             </a>
                             <a href="#">
-                                <p>— App/Digital Product</p>
+                                <p>— Productos - App/Digital</p>
                             </a>
                         </div>
                         <img src="assets/images/portfolio-01.jpg" class="img-fluid" alt="Portfolio 01">
