--- a/Smart-Agency/Bootstrap4/index.html
+++ b/Smart-Agency/Bootstrap4/index.html
@@ -362,12 +362,12 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <input type="text" class="form-control" id="" placeholder="Name">
+                                <input type="text" class="form-control" id="" placeholder="Nombre">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <input type="text" class="form-control" id="" placeholder="Last name">
+                                <input type="text" class="form-control" id="" placeholder="Apellido">
                             </div>
                         </div>
                         <div class="col-md-12">
@@ -377,16 +377,16 @@
                         </div>
                         <div class="col-md-12">
                             <div class="form-group">
-                                <input type="text" class="form-control" id="" placeholder="Company name">
+                                <input type="text" class="form-control" id="" placeholder="Empresa">
                             </div>
                         </div>
                         <div class="col-md-12">
                             <div class="form-group">
-                                <input type="number" class="form-control" id="" placeholder="Phone number (optional)">
+                                <input type="number" class="form-control" id="" placeholder="Celular (opcional)">
                             </div>
                         </div>
                         <div class="col-md-12">
-                            <a href="" class="btn btn-primary full-width">Contacto ventas</a>
+                            <a href="" class="btn btn-primary full-width">Enviar</a>
                         </div>
                     </div>
                 </div>
@@ -412,7 +412,7 @@
                 <li class="list-inline-item"><a href="#"><img src="assets/images/dribbble.svg" class="img-fluid"></a></li>
                 <li class="list-inline-item"><a href="#"><img src="assets/images/facebook.svg" class="img-fluid"></a></li>
             </ul>
-            <small>©2022 Todos los derechos reservados<a href="https://themesbootstrap.com.mx/" class="font-weight-bold" target="_blank"
+            <small>©2022 Todos los derechos reservados <a href="https://themesbootstrap.com.mx/" class="font-weight-bold" target="_blank"
                     rel="noopener">Themes Bootstrap</a></small>
         </div>
     </footer>
