--- a/Smart-Agency/Bootstrap4/index.html
+++ b/Smart-Agency/Bootstrap4/index.html
@@ -66,7 +66,7 @@
                 <h1 class="mt-5">Website Diseño y Desarrollo</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui ea consequuntur, odit veniam mollitia
                     aliquam reiciendis dignissimos, vitae sapiente neque, cum dolorum.</p>
-                <a href="#" class="btn btn-secondary mt-4">Explore now <img src="assets/images/arrow-right.svg" class="ml-2"></a>
+                <a href="#" class="btn btn-secondary mt-4">Explorar <img src="assets/images/arrow-right.svg" class="ml-2"></a>
             </div>
         </duv>
     </section>
