--- a/Smart-Agency/Bootstrap4/index.html
+++ b/Smart-Agency/Bootstrap4/index.html
@@ -218,7 +218,7 @@
                         <div class="plans plan-light">
                             <h4>Paquete Inicial</h4>
                             <h2>$89 <span>/ por mes</span></h2>
-                            <h4>1 millon de datos</h4>
+                            <h4>1 Millon de datos</h4>
                             <ul class="mt-3">
                                 <li>Integracion con Google Analytics</li>
                                 <li>Pagos Online </li>
@@ -233,7 +233,7 @@
                         <div class="plans plan-dark">
                             <h4>Paquete premium</h4>
                             <h2>$139 <span>/ por mes</span></h2>
-                            <h4>Mas de 1 Million de datos</h4>
+                            <h4>Mas de 1 Millon de datos</h4>
                             <ul class="mt-3">
                                <li>Integracion con Google Analytics</li>
                                <li>Pagos Online </li>
