--- a/Smart-Agency/Bootstrap4/index.html
+++ b/Smart-Agency/Bootstrap4/index.html
@@ -61,14 +61,14 @@
     </nav>
 
     <section id="hero">
-        <duv class="container">
+        <div class="container-fluid">
             <div class="content-center">
                 <h1 class="mt-5">Website Diseño y Desarrollo</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui ea consequuntur, odit veniam mollitia
                     aliquam reiciendis dignissimos, vitae sapiente neque, cum dolorum.</p>
                 <a href="#" class="btn btn-secondary mt-4">Explorar <img src="assets/images/arrow-right.svg" class="ml-2"></a>
             </div>
-        </duv>
+        </div>
     </section>
 
     <section id="portfolio">
