--- a/Smart-Agency/Bootstrap4/index.html
+++ b/Smart-Agency/Bootstrap4/index.html
@@ -60,10 +60,10 @@
         </div>
     </nav>
 
-    <section id="hero">
+    <section id="portfolio">
         <div class="container-fluid">
             <div class="content-center">
-                <h1 class="mt-5">Website Diseño y Desarrollo</h1>
+                <h2 class="mt-5">Website Diseño y Desarrollo</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui ea consequuntur, odit veniam mollitia
                     aliquam reiciendis dignissimos, vitae sapiente neque, cum dolorum.</p>
                 <a href="#" class="btn btn-secondary mt-4">Explorar <img src="assets/images/arrow-right.svg" class="ml-2"></a>
