--- a/Smart-Agency/Bootstrap4/index.html
+++ b/Smart-Agency/Bootstrap4/index.html
@@ -386,7 +386,7 @@
                             </div>
                         </div>
                         <div class="col-md-12">
-                            <a href="" class="btn btn-primary full-width">Enviar</a>
+                            <a href="#openModal" class="btn btn-primary full-width">Enviar</a>
                         </div>
                     </div>
                 </div>
@@ -416,6 +416,15 @@
                     rel="noopener">Themes Bootstrap</a></small>
         </div>
     </footer>
+    
+    <!--ventana modal-->
+<div id="openModal" class="modalDialog">
+    <div>
+        <a href="#close" title="Close" class="close">X</a>
+        <h2>Gracias por contactarse</h2>
+        <p>Este es un ejemplo de ventana modal</p>
+    </div>
+</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
