--- a/Smart-Agency/Bootstrap4/index.html
+++ b/Smart-Agency/Bootstrap4/index.html
@@ -23,7 +23,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/images//favicon.png" />
 
-    <title>David Romero Scozziero|  Bootstrap prueba</title>
+    <title>David Romero Scozziero |  Bootstrap prueba</title>
 </head>
 
 <body>
@@ -337,13 +337,13 @@
                     <div class="control-button">
                         <img src="assets/images/arrow-borderless-left.svg" class="img-fluid">
                     </div>
-                    <span class="sr-only">Previous</span>
+                    <span class="sr-only">Previo</span>
                 </a>
                 <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
                     <div class="control-button">
                         <img src="assets/images/arrow-borderless-right.svg" class="img-fluid">
                     </div>
-                    <span class="sr-only">Next</span>
+                    <span class="sr-only">Siguiente</span>
                 </a>
             </div>
         </div>
